--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
 
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap');
@@ -563,9 +564,6 @@ a#scroll-btn:after {
   color: var(--span-color);
   border-radius: 2px;
   transition: .5s all;
-
-
-
 }
 
 .call-to-action a:hover {
@@ -979,6 +977,14 @@ a#scroll-btn:after {
   #projects .item {
     flex-direction: column;
   }
+  .call-to-action a {
+  font-family: 'Roboto Mono', monospace;
+  padding: 8px 14px;
+  border: 2px solid var(--span-color);
+  color: var(--span-color);
+  border-radius: 2px;
+  transition: .5s all;
+}
 
   #projects .item .left {
     width: 100%;
